# test_task

./: .env.docker  .env.template  README.md  docker-compose.yml
app/: .env.template  Dockerfile  main.py  pyproject.toml
app/api/: main_router.py
app/api/file_manager/: minio_helper.py
app/api/images/: controller.py  service.py
app/api/vectors/: controller.py  schema.py  service.py
app/core/: config.py  elastic.py  kafka.py  logger_config.py
front/: Dockerfile  package-lock.json  package.json
front/public/: index.html
front/src/: App.tsx
front/src/components/Header/: Header.module.css  Header.tsx
front/src/components/Image/: Image.module.css  Image.tsx
front/src/components/ImageResult/: ImageResult.module.css  ImageResultComponent.tsx
front/src/entities/ImageResult/: type.ts
front/src/http/: index.ts
front/src/pages/: AppRouter.tsx  RouterNames.ts
front/src/pages/Images/: ImagePage.module.css  ImagesPage.tsx
front/src/pages/Statistics/: StatisticsPage.module.css  StatisticsPage.tsx
front/src/pages/Uploading/: UploadingPage.module.css  UploadingPage.tsx
