[project]
name = "test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "VladLennin",email = "vladilen.marchenko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "urllib3 (>=2.4.0,<3.0.0)",
    "minio (>=7.2.15,<8.0.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "pyheif (>=0.8.0,<0.9.0)",
    "pillow-heif (>=0.22.0,<0.23.0)",
    "elasticsearch[async]==8.12.1",
    "aiohttp (>=3.11.18,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
